MetaFormEdit: Fix bug that caused new fields to appear at wrong position after removing old values. Some refactoring.

--- a/graphingwiki/htdocs/gwikicommon/css/common.css
+++ b/graphingwiki/htdocs/gwikicommon/css/common.css
@@ -16,6 +16,14 @@ a.plus:after {
     margin-left: 10px;
 }
 
+a.cross:after {
+    content: "x";
+    color: red;
+    font-weight: bold;
+    font-size: 1.2em;
+    margin-left: 5px;
+}
+
 .alphabg {
     background: rgba(0, 0, 0, 0.80);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = #CC000000, endColorstr = #CC000000);
@@ -199,8 +207,31 @@ textarea {
     display: none;
 }
 
-.clear {
+/**
+ * For modern browsers
+ * 1. The space content is one way to avoid an Opera bug when the
+ *    contenteditable attribute is included anywhere else in the document.
+ *    Otherwise it causes space to appear at the top and bottom of elements
+ *    that are clearfixed.
+ * 2. The use of `table` rather than `block` is only necessary if using
+ *    `:before` to contain the top-margins of child elements.
+ */
+.clearfix:before,
+.clearfix:after {
+    content: " "; /* 1 */
+    display: table; /* 2 */
+}
+
+.clearfix:after {
     clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.clearfix {
+    *zoom: 1;
 }
 
 div.ac-results {
